Fixes organizations index button's text overflow

--- a/public/designs/themes/base/style.scss
+++ b/public/designs/themes/base/style.scss
@@ -1942,7 +1942,7 @@ form.form-with-captcha {
   padding: 0.5em 0.5em 0.8em 0.5em !important;
   margin-right: 0.5em !important;
   height: 1em;
-  width: 4em;
+  min-width: 4em;
 }
 
 .hidden-submit {
